add token, api pages
